# claw-code-ui-cmd

./: README.md  claw.bat  webcmd.bat  webcmd.txt
.claude/: launch.json
.claw/plugins/: installed.json
rust/.claw/plugins/: installed.json
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  lib.rs
rust/crates/api/src/providers/: mod.rs  ollama_discovery.rs  openai_compat.rs
rust/crates/claw-cli/: Cargo.toml
rust/crates/claw-cli/src/: input.rs  main.rs
rust/crates/runtime/src/: bash.rs  config.rs  file_ops.rs  oauth.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: lib.rs  workspace_tools.rs
test_project/: calculate_pi.py
test_project/.claw/sessions/: session-1775127864255.json
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts
web/src/components/: ChatWindow.tsx  MessageInput.tsx  ModelSelector.tsx  SessionList.tsx
