[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
runtime = { path = "../runtime" }
tools = { path = "../tools" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

[lints]
workspace = true
